--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "intervention/image": "^3.8",
         "intervention/image-laravel": "^1.3",
+        "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
