--- a/src/composer.json
+++ b/src/composer.json
@@ -10,7 +10,8 @@
         "intervention/image-laravel": "^1.3",
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
